--- a/diary.html
+++ b/diary.html
@@ -124,10 +124,10 @@
           </div>
           <div class = 'container3'>
             <div class = 'box3'>
-              <div class = 'menu1'><a href = '../home.html'>홈</a></div>
-              <div class = 'menu2'><a href = '../diary.html'>다이어리</a></div>
-              <div class = 'menu3'><a href = '../photobox.html'>사진첩</a></div>
-              <div class = 'menu4'><a href = '../guest.html'>방명록</a></div>
+              <div class = 'menu1'><a href = 'home.html'>홈</a></div>
+              <div class = 'menu2'><a href = 'diary.html'>다이어리</a></div>
+              <div class = 'menu3'><a href = 'photobox.html'>사진첩</a></div>
+              <div class = 'menu4'><a href = 'guest.html'>방명록</a></div>
             </div>
           </div> 
 
