--- a/photobox.html
+++ b/photobox.html
@@ -48,10 +48,10 @@
           </div>
           <div class = 'container3'>
             <div class = 'box3'>
-              <div class = 'menu1'><a href = '../home.html'>홈</a></button></div>
-              <div class = 'menu2'><a href = '../diary.html'>다이어리</a></button></div>
-              <div class = 'menu3'><a href = '../photobook.html'>사진첩</a></button></div>
-              <div class = 'menu4'><a href = '../guest.html'>방명록</a></button></div>
+              <div class = 'menu1'><a href = 'home.html'>홈</a></button></div>
+              <div class = 'menu2'><a href = 'diary.html'>다이어리</a></button></div>
+              <div class = 'menu3'><a href = 'photobook.html'>사진첩</a></button></div>
+              <div class = 'menu4'><a href = 'guest.html'>방명록</a></button></div>
             </div>
           </div> 
 
