--- a/guest.html
+++ b/guest.html
@@ -33,7 +33,7 @@
           <div class = 'container2'>
             <div class = 'title'>
               <div class = 'column2'>쭈쭈의 추억상자</div>
-              <div class = 'column3'>http://url주소 나중에 입력</div>
+              <div class = 'column3'><a href = 'https://zzuzzu99.github.io/mini-homepage/home.html'> 홈페이지 바로 가기</a></div>
             </div>     
             <div class = 'box2'>
                <div class = 'guest_book'>
