--- a/guest.html
+++ b/guest.html
@@ -88,7 +88,7 @@
             <div class = 'box3'>
               <div class = 'menu1'><a href = 'home.html'>홈</a></button></div>
               <div class = 'menu2'><a href = 'diary.html'>다이어리</a></button></div>
-              <div class = 'menu3'><a href = 'photobook.html'>사진첩</a></button></div>
+              <div class = 'menu3'><a href = 'photobox.html'>사진첩</a></button></div>
               <div class = 'menu4'><a href = 'guest.html'>방명록</a></button></div>
             </div>
           </div> 
